--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "next"
   ],
   "dependencies": {
+    "@nextui-org/card": "^2.0.31",
+    "@nextui-org/react": "^2.4.2",
     "@reduxjs/toolkit": "^1.8.1",
+    "framer-motion": "^11.2.11",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
     "next-redux-wrapper": "^6.0.2",
@@ -24,6 +28,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^6.8.2",
+    "react-owl-carousel": "^2.3.3",
     "react-rater": "^5.1.1",
     "react-redux": "^7.2.1",
     "react-select": "^3.1.0",
@@ -33,8 +38,9 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "^1.26.10",
-    "swiper": "^6.5.1",
+    "swiper": "^11.1.4",
     "swr": "^0.3.2",
+    "tailwindcss": "^3.4.4",
     "use-onclickoutside": "^0.3.1"
   },
   "devDependencies": {
